add dialogs and pdf excel export

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,10 +103,33 @@
     }
 }
 
-@layer utilities {
-    .text-balance {
-        text-wrap: balance;
+@media all {
+    .page-break {
+        display: none;
     }
+}
+
+@media print {
+    html,
+    body {
+        height: initial !important;
+        overflow: initial !important;
+        -webkit-print-color-adjust: exact;
+    }
+}
+
+@media print {
+    .page-break {
+        margin-top: 1rem;
+        display: block;
+        page-break-before: auto;
+        page-break-after: always;
+    }
+}
+
+@page {
+    size: auto;
+    /* margin: 20mm; */
 }
 
 .filled {
