--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,6 +136,44 @@
     /* margin: 20mm; */
 }
 
+.dark .label-text {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark input.input,
+.dark textarea.textarea {
+    --tw-bg-opacity: 1;
+    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+    /* background-color: transparent; */
+}
+.dark input.input:focus,
+.dark input.input:hover,
+.dark textarea.textarea:focus,
+.dark textarea.textarea:hover {
+    --tw-bg-opacity: 1;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    background-color: rgb(20 20 20 / var(--tw-bg-opacity));
+}
+.dark .input-bordered,
+.dark .textarea-bordered {
+    --tw-border-opacity: 1;
+    border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
+.dark .skeleton {
+    background-color: var(--fallback-b3, oklch(0.4 0 0));
+    background-image: linear-gradient(
+        105deg,
+        transparent 0%,
+        transparent 40%,
+        var(--fallback-b1, oklch(0.56 0 0)) 50%,
+        transparent 60%,
+        transparent 100%
+    );
+}
+
 .filled {
     font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
 }
